# Complete-Medical-Chatbot-with-LLMs-LangChain-Pinecone-Flask-AWS-

./: .gitignore  app.py  chat_history.db  database.db  main.py  pyproject.toml  requirements.txt  sample.py  template.sh
app/core/security/: authHandler.py  hashHelper.py
app/db/models/: message.py
app/db/repository/: base.py  messageRepository.py  userRepository.py
app/db/schemas/: message.py
app/router/: auth.py  message.py
app/services/: messageService.py
app/util/: db.py  protectRoute.py
backend/: .gitignore  bash.exe.stackdump  database.db  main.py  pyproject.toml  requirements.txt  setup.py
backend/app/core/: database.py
backend/app/db/models/: user.py
backend/app/db/schemas/: user.py
backend/app/router/: auth.py  message.py
backend/app/services/: userService.py
backend/src/: gemini_script.py  helper.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: ChatBox.jsx  Login.jsx
src/: db_methods.py  helper.py  prompt.py  rag_methods.py  store_index.py  upload_files.py
src/models/: message.py
static/: styles.css
templates/: chat.html  index.html
templates/src/: App.jsx
templates/src/assets/: App.css
templates/src/context/: AppContext.jsx
templates/src/pages/: ChatBox.jsx  Login.jsx
